Some random little code optimization and possible NPE fixes.
git-svn-id: http://svn.l2jserver.com/branches/unstable@4642 d34dfa0f-f91c-0410-86dd-cf06f19dd0ad